# termocast

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: tagging.yml
.github/workflows/: rust.yml
src/: art.rs  main.rs  types.rs  ui.rs
