[package]
name = "termocast"
version = "0.2.2"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com>"]
description = "A terminal-based weather application"
license = "MIT"
repository = "https://github.com/santoshxshrestha/termocast"
homepage = "https://github.com/santoshxshrestha/termocast"
keywords = ["terminal", "weather", "cli", "rust"]
readme = "README.md"

[dependencies]
crossterm = "0.29.0"
dotenv = "0.15.0"
ratatui = "0.29.0"
reqwest = "0.12.26"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
